--- a/biofuels.html
+++ b/biofuels.html
@@ -22,6 +22,9 @@
         crossorigin="anonymous"></script>
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!-- Google Icons -->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -172,7 +175,8 @@
             </div>
             <!-- 2nd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.webp" class="card-img-top" alt="ETHANOL">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-2.webp" class="card-img-top"
+                    alt="ETHANOL">
                 <div class="card-body">
                     <h3>ETHANOL</h3>
                     <p>Ethanol is an alcohol-based biofuel primarily derived from corn or sugarcane.</p>
@@ -187,7 +191,8 @@
             </div>
             <!-- 3rd Card -->
             <div class="card-product col-md-6 p-4">
-                <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.webp" class="card-img-top" alt="BIO LNG">
+                <img src="./assets/images/biofuels/card-img/biofuels-card-img-3.webp" class="card-img-top"
+                    alt="BIO LNG">
                 <div class="card-body">
                     <h3>BIO LNG</h3>
                     <p>Bio LNG is a renewable form of liquefied natural gas made from organic matter.</p>
@@ -303,7 +308,31 @@
         </div>
     </section>
 
+    <!-- Back to Top -->
+    <button id="backToTopBtn" title="Go to top">
+        <span class="material-symbols-outlined">
+            keyboard_arrow_up
+        </span>
+    </button>
+
     <script src="./assets/scripts/script.js"></script>
+
+    <script>
+        //Back to Top Script
+        let backToTopBtn = document.getElementById("backToTopBtn");
+        window.onscroll = function () { scrollFunction() };
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                backToTopBtn.style.display = "block";
+            } else {
+                backToTopBtn.style.display = "none";
+            }
+        };
+        backToTopBtn.onclick = function () {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
+        };
+    </script>
 
 </body>
 
