--- a/our-company.html
+++ b/our-company.html
@@ -22,6 +22,9 @@
     crossorigin="anonymous"></script>
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Google Icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -99,7 +102,8 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item carousel-item-custom-height active">
-        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-1.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-1.webp" class="d-block w-100"
+          alt="...">
         <!-- <div class="carousel-caption d-none d-md-block text-start"> -->
         <div class="carousel-caption text-center">
           <h1>CHEMICALS AND CATTLE FIELD FERTILIZER</h1>
@@ -109,7 +113,8 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-3.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-3.webp" class="d-block w-100"
+          alt="...">
         <div class="carousel-caption text-center">
           <h1>COMMODITIES AND FOOD PRODUCTS</h1>
           <p class="text-center">When it comes to petroleum and biofuel, we've got you covered. Our products are shipped
@@ -118,7 +123,8 @@
         </div>
       </div>
       <div class="carousel-item carousel-item-custom-height">
-        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-2.webp" class="d-block w-100" alt="...">
+        <img src="assets/images/our-company-page/hero-section/our-company-hero-img-2.webp" class="d-block w-100"
+          alt="...">
         <div class="carousel-caption text-center">
           <h1>PETROLEUM AND BIO FUEL</h1>
           <p class="text-center">Are you looking for top-quality agriculture commodities and food products? Look no
@@ -435,7 +441,31 @@
     </div>
   </section>
 
+  <!-- Back to Top -->
+  <button id="backToTopBtn" title="Go to top">
+    <span class="material-symbols-outlined">
+      keyboard_arrow_up
+    </span>
+  </button>
+
   <script src="./assets/scripts/script.js"></script>
+
+  <script>
+    //Back to Top Script
+    let backToTopBtn = document.getElementById("backToTopBtn");
+    window.onscroll = function () { scrollFunction() };
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        backToTopBtn.style.display = "block";
+      } else {
+        backToTopBtn.style.display = "none";
+      }
+    };
+    backToTopBtn.onclick = function () {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
+    };
+  </script>
 
 </body>
 
