--- a/our-services.html
+++ b/our-services.html
@@ -24,6 +24,9 @@
     crossorigin="anonymous"></script>
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- Google Icons -->
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 
 <body>
@@ -121,7 +124,7 @@
             can trust that the quality is always up to standard.</p>
         </div>
       </div>
-      <div class="carousel-item carousel-item-custom-height">
+      <!-- <div class="carousel-item carousel-item-custom-height">
         <img src="assets/images/our-services-icon-img/hero-services-section-img/Rectangle 53.webp" class="d-block w-100"
           alt="...">
         <div class="carousel-caption text-center">
@@ -130,7 +133,7 @@
             further! We ship our
             products all over the world, and our quality meets all the necessary requirements.</p>
         </div>
-      </div>
+      </div> -->
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -613,8 +616,32 @@
     </div>
   </section>
 
+  <!-- Back to Top -->
+  <button id="backToTopBtn" title="Go to top">
+    <span class="material-symbols-outlined">
+      keyboard_arrow_up
+    </span>
+  </button>
+
   <script src="./assets/scripts/script.js"></script>
   <script src="./assets/scripts/custom-carousel.js"></script>
+
+  <script>
+    //Back to Top Script
+    let backToTopBtn = document.getElementById("backToTopBtn");
+    window.onscroll = function () { scrollFunction() };
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        backToTopBtn.style.display = "block";
+      } else {
+        backToTopBtn.style.display = "none";
+      }
+    };
+    backToTopBtn.onclick = function () {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
+    };
+  </script>
 
 </body>
 
