--- a/products.html
+++ b/products.html
@@ -326,7 +326,31 @@
     </div>
   </section>
 
+  <!-- Back to Top -->
+  <button id="backToTopBtn" title="Go to top">
+    <span class="material-symbols-outlined">
+      keyboard_arrow_up
+    </span>
+  </button>
+
   <script src="./assets/scripts/script.js"></script>
+
+  <script>
+    //Back to Top Script
+    let backToTopBtn = document.getElementById("backToTopBtn");
+    window.onscroll = function () { scrollFunction() };
+    function scrollFunction() {
+      if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        backToTopBtn.style.display = "block";
+      } else {
+        backToTopBtn.style.display = "none";
+      }
+    };
+    backToTopBtn.onclick = function () {
+      document.body.scrollTop = 0; // For Safari
+      document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE, and Opera
+    };
+  </script>
 
 </body>
 
