--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                             </div>
                             <h2 data-number="100%" class="counter-numbers">0+</h2>
                         </div>
-                        <h2 class="skill-counting-content">on the delivery</h2>
+                        <h2 class="skill-counting-content">On Time Delivery</h2>
                     </div>
 
                     <div class="col-lg-3 col-md-6 col-sm-6 box-our-skill">
