--- a/agro-commodities.html
+++ b/agro-commodities.html
@@ -157,6 +157,28 @@
         </div>
         <div class="row">
             <!-- 1st Card -->
+            <!-- <div class="col-md-6 d-flex align-items-start">
+                <div class="connecting-box"></div>
+                <div class="card-product p-4">
+                    <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
+                        class="card-img-top" alt="Rice">
+                    <div class="card-body">
+                        <h3>RICE</h3>
+                        <p>A Versatile staple food or billions globally, cherished for its nutritional value and
+                            culinary
+                            diversity.</p>
+                        <ul>
+                            <li>Rice is a staple food for billions, providing vital carbohydrates.</li>
+                            <li>Varieties include long-grain, short-grain, and basmati, which offer distinct qualities.
+                            </li>
+                            <li>Leading rice producers: China, India, Indonesia.</li>
+                            <li>A versatile ingredient from sushi to risotto.</li>
+                            <li>Vital global food security and agriculture.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div> -->
+            <!-- 1st Card -->
             <div class="card-product col-md-6 p-4">
                 <img src="./assets/images/agro-commodities/card-img/agro-commodities-card-img-1.webp"
                     class="card-img-top" alt="Rice">
