job application - fetch mode set to "cors"

--- a/career.html
+++ b/career.html
@@ -639,7 +639,7 @@
         headers: {
           'Content-Type': 'application/json'
         },
-        // mode: 'cors'
+        mode: 'cors'
       })
         .then(response => response.text())
         .then(data => {
